<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheets_background"
    android:elevation="8dp"
    android:orientation="vertical"
    android:paddingBottom="32dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sliderDrawer"
        android:layout_width="75dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        app:cardBackgroundColor="@color/custom_toast_font_normal_soft_gray"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp" />

    <TextView
        android:id="@+id/trialTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/hold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/selectSupervisorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/hold_issue_description_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionFieldLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:placeholderText="@string/hold_issue_description_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionField"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/holdIssueButton"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:cardBackgroundColor="@color/status_hold"
        app:cardCornerRadius="50dp"
        app:strokeWidth="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hold_issue"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>