<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/login_button_elevation"
    android:orientation="vertical"
    android:paddingBottom="@dimen/login_button_margin_vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/bottom_sheet_drawer_width"
        android:layout_height="@dimen/bottom_sheet_drawer_height"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/bottom_sheet_drawer_margin_vertical"
        app:cardBackgroundColor="@color/custom_toast_font_normal_soft_gray"
        app:cardCornerRadius="@dimen/login_button_corner_radius"
        app:strokeWidth="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_item_padding"
        android:text="@string/update_status"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/issueTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/dialog_loading_content_padding"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_small"
        tools:text="PINTU AUTOCLAVE ECHUNG D-14 TIDAK DAPAT MENUTUP" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionFieldLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/user_info_item_margin_top"
        android:hint="@string/case_description"
        android:visibility="gone"
        app:boxCornerRadiusBottomEnd="@dimen/login_field_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/login_field_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/login_field_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/login_field_corner_radius"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="@dimen/login_field_stroke_width"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_menu_item_height"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textSize="@dimen/text_size_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/selectSupervisorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/user_info_item_margin_top"
        android:text="@string/select_supervisor"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSupervisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/dialog_loading_content_padding"
        android:visibility="gone"
        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
        tools:itemCount="2"
        tools:listitem="@layout/list_item_selected_items" />

    <TextView
        android:id="@+id/selectComplexityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/user_info_item_margin_top"
        android:text="@string/select_complexity"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/complexityRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/dialog_loading_content_padding"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/lowSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/complexity_low"
            android:textColor="@color/custom_toast_font_success"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/midSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/complexity_mid"
            android:textColor="@color/custom_toast_font_warning"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/highSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/complexity_high"
            android:textColor="@color/custom_toast_font_failed"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/selectTechniciansText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/user_info_item_margin_top"
        android:text="@string/select_technicians"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTechnicians"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/dialog_loading_content_padding"
        android:visibility="gone"
        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
        tools:itemCount="2"
        tools:listitem="@layout/list_item_selected_items" />

    <LinearLayout
        android:id="@+id/actionsButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/bottom_sheet_content_margin_top"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/rejectButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_padding_bottom"
            android:layout_weight="1"
            android:visibility="gone"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/login_button_corner_radius"
            app:strokeColor="@color/custom_toast_font_failed"
            app:strokeWidth="@dimen/login_field_stroke_width">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_reject"
                android:textColor="@color/custom_toast_font_failed"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/rejectLoading"
                android:layout_width="@dimen/login_progress_bar_size"
                android:layout_height="@dimen/login_progress_bar_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dialog_loading_content_padding"
                android:indeterminateTint="@color/custom_toast_font_failed"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/approveButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_padding_bottom"
            android:layout_weight="1"
            android:visibility="gone"
            app:cardBackgroundColor="@color/custom_toast_background_success"
            app:cardCornerRadius="@dimen/login_button_corner_radius"
            app:strokeWidth="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_approve"
                android:textColor="@color/custom_toast_font_success"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/approveLoading"
                android:layout_width="@dimen/login_progress_bar_size"
                android:layout_height="@dimen/login_progress_bar_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dialog_loading_content_padding"
                android:indeterminateTint="@color/custom_toast_font_success"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_padding_bottom"
            android:layout_weight="1"
            android:visibility="gone"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/login_button_corner_radius"
            app:strokeColor="@color/custom_toast_font_failed"
            app:strokeWidth="@dimen/login_field_stroke_width">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_cancel_this_issue"
                android:textColor="@color/custom_toast_font_failed"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/cancelLoading"
                android:layout_width="@dimen/login_progress_bar_size"
                android:layout_height="@dimen/login_progress_bar_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dialog_loading_content_padding"
                android:indeterminateTint="@color/custom_toast_font_failed"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/deployTechButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_padding_bottom"
            android:layout_marginVertical="@dimen/user_info_item_margin_top"
            android:layout_weight="1"
            android:visibility="gone"
            app:cardBackgroundColor="@color/custom_toast_default_background"
            app:cardCornerRadius="@dimen/login_button_corner_radius"
            app:strokeWidth="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_deploy_tech"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/deployTechLoading"
                android:layout_width="@dimen/login_progress_bar_size"
                android:layout_height="@dimen/login_progress_bar_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dialog_loading_content_padding"
                android:indeterminateTint="@color/custom_toast_font_blue"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>