<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheets_background"
    android:elevation="@dimen/login_button_elevation"
    android:orientation="vertical"
    android:paddingBottom="@dimen/login_button_margin_vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/bottom_sheet_drawer_width"
        android:layout_height="@dimen/bottom_sheet_drawer_height"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/bottom_sheet_drawer_margin_vertical"
        app:cardBackgroundColor="@color/custom_toast_font_normal_soft_gray"
        app:cardCornerRadius="@dimen/login_button_corner_radius"
        app:strokeWidth="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:text="@string/ac_check_in_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="AC Details"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/list_item_submission_description_padding_vertical"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ac_code"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_id"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_item_submission_machine_code_margin_start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="@dimen/text_size_small"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="@dimen/text_size_small"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_item_submission_machine_code_margin_start"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAcCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                tools:text="AC-001" />

            <TextView
                android:id="@+id/tvItemId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                tools:text="10" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/bottom_sheet_content_margin_top"
        android:text="@string/ready_to_begin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:text="@string/check_in_instruction"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_small" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnCheckIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_padding_bottom"
        android:layout_marginHorizontal="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/main_menu_notification_icon"
        android:layout_marginBottom="@dimen/dialog_margin"
        app:cardCornerRadius="@dimen/login_button_corner_radius"
        app:strokeWidth="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_accent_color"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>